# open-spx

./: .gitignore  DATA_LICENSE.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
docs/: rnn_methodology.md
src/openspx/: __init__.py  cli.py  constituents.py  data.py  replicate.py  rnn.py
tests/: test_cli.py  test_constituents.py  test_data.py  test_replicate.py  test_rnn.py
