[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-spx"
version = "0.1.0"
description = "Open Python code and data for reconstructing S&P 500 returns from constituents, estimated weights, returns, and contribution analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Willem Geul" }
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "torch>=2.0",
  "tqdm>=4.66",
  "matplotlib>=3.8"
]

[project.urls]
Homepage = "https://github.com/wrageul/open-spx"
Repository = "https://github.com/wrageul/open-spx"

[project.scripts]
open-spx = "openspx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
